fix waybar spacing

--- a/waybar.css
+++ b/waybar.css
@@ -3,9 +3,9 @@
 }
 
 .modules-left {
-  margin-left: 0px;
+  margin-left: 4px;
 }
 
 .modules-right {
-  margin-right: 0px;
+  margin-right: 4px;
 }
